--- a/Results_analysis_2_5_komodo_project_public_dataset.ipynb
+++ b/Results_analysis_2_5_komodo_project_public_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "629b09e9",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,11 @@
     "from optimization_c_r_rc_100_100_dataset.sa import SA\n",
     "from optimization_c_r_rc_100_100_dataset.tabu_search import TS\n",
     "from optimization_c_r_rc_100_100_dataset.woa import WOA\n",
+    "from optimization_c_r_rc_100_100_dataset.ils import ILS\n",
+    "from optimization_c_r_rc_100_100_dataset.ils_sa import ILS_SA\n",
+    "from optimization_c_r_rc_100_100_dataset.ils_ts import ILS_TS\n",
+    "from optimization_c_r_rc_100_100_dataset.ils_sa_ts import ILS_SA_TS\n",
+    "from optimization_c_r_rc_100_100_dataset.mga import MGA\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -39,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "18c91806",
    "metadata": {},
    "outputs": [],
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "96296883",
    "metadata": {},
    "outputs": [],
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "321e6ffe",
    "metadata": {},
    "outputs": [],
@@ -208,43 +213,65 @@
     "            \"run_time\" : []\n",
     "        }\n",
     "\n",
-    "        aco = ACO(random_state = random_state)\n",
-    "        results_aco = get_analysis(aco,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"aco\")\n",
+    "#         aco = ACO(random_state = random_state)\n",
+    "#         results_aco = get_analysis(aco,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"aco\")\n",
     "\n",
-    "        acs = ACS(random_state = random_state)\n",
-    "        results_acs = get_analysis(acs,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"acs\")\n",
+    "#         acs = ACS(random_state = random_state)\n",
+    "#         results_acs = get_analysis(acs,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"acs\")\n",
     "\n",
-    "        bso = BSO(random_state = random_state)\n",
-    "        results_bso = get_analysis(bso,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"bso\")\n",
+    "#         bso = BSO(random_state = random_state)\n",
+    "#         results_bso = get_analysis(bso,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"bso\")\n",
     "\n",
-    "        dka = DKA(random_state = random_state)\n",
-    "        results_dka = get_analysis(dka,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"dka\")\n",
+    "#         dka = DKA(random_state = random_state)\n",
+    "#         results_dka = get_analysis(dka,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"dka\")\n",
     "\n",
-    "        ga = GA(random_state = random_state)\n",
-    "        results_ga = get_analysis(ga,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"ga\")\n",
+    "#         ga = GA(random_state = random_state)\n",
+    "#         results_ga = get_analysis(ga,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"ga\")\n",
     "\n",
-    "        pso = PSO(random_state = random_state)\n",
-    "        results_pso = get_analysis(pso,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"pso\")\n",
+    "#         pso = PSO(random_state = random_state)\n",
+    "#         results_pso = get_analysis(pso,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"pso\")\n",
     "\n",
-    "        sa = SA(random_state = random_state)\n",
-    "        results_sa = get_analysis(sa,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"sa\")\n",
+    "#         sa = SA(random_state = random_state)\n",
+    "#         results_sa = get_analysis(sa,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"sa\")\n",
     "\n",
-    "        ts = TS(random_state = random_state)\n",
-    "        results_ts = get_analysis(ts,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"ts\")\n",
+    "#         ts = TS(random_state = random_state)\n",
+    "#         results_ts = get_analysis(ts,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"ts\")\n",
     "\n",
-    "        woa = WOA(random_state = random_state)\n",
-    "        results_woa = get_analysis(woa,depot,nodes,num_vehicle)\n",
-    "        results[\"method\"].append(\"woa\")\n",
+    "#         woa = WOA(random_state = random_state)\n",
+    "#         results_woa = get_analysis(woa,depot,nodes,num_vehicle)\n",
+    "#         results[\"method\"].append(\"woa\")\n",
+    "        \n",
+    "        ils = ILS(random_state = random_state)\n",
+    "        results_ils = get_analysis(ils,depot,nodes,num_vehicle)\n",
+    "        results[\"method\"].append(\"ils\")\n",
+    "        \n",
+    "        ils_sa = ILS_SA(random_state = random_state)\n",
+    "        results_ils_sa = get_analysis(ils_sa,depot,nodes,num_vehicle)\n",
+    "        results[\"method\"].append(\"ils_sa\")\n",
+    "        \n",
+    "        ils_ts = ILS_TS(random_state = random_state)\n",
+    "        results_ils_ts = get_analysis(ils_ts,depot,nodes,num_vehicle)\n",
+    "        results[\"method\"].append(\"ils_ts\")\n",
+    "        \n",
+    "        ils_sa_ts = ILS_SA_TS(random_state = random_state)\n",
+    "        results_ils_sa_ts = get_analysis(ils_sa_ts,depot,nodes,num_vehicle)\n",
+    "        results[\"method\"].append(\"ils_sa_ts\")\n",
+    "        \n",
+    "        mga = MGA(random_state = random_state)\n",
+    "        results_mga = get_analysis(mga,depot,nodes,num_vehicle)\n",
+    "        results[\"method\"].append(\"mga\")\n",
     "\n",
-    "        for i in [results_aco,results_acs,results_bso,results_dka,results_ga,results_pso,results_sa,results_ts,results_woa]:\n",
+    "        for i in [results_aco,results_acs,results_bso,results_dka,results_ga,\n",
+    "                  results_pso,results_sa,results_ts,results_woa,results_ils,\n",
+    "                  results_ils_sa,results_ils_ts,results_ils_sa_ts,results_mga]:\n",
     "            results[\"fitness\"].append(i[\"fitness\"])\n",
     "            results[\"run_time\"].append(i[\"run_time\"])\n",
     "\n",
@@ -2109,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d1ddc63",
+   "id": "53d883bd",
    "metadata": {},
    "outputs": [],
    "source": []
